add access type selection when event format is "HYBRID"